# Vx.Blaze

./: Accessor.cpp  Accessor.h  BackgroundNode.cpp  BackgroundNode.h  Buffer.h  BufferView.cpp  BufferView.h  CMakeLists.txt  Camera.cpp  Camera.h  EnvironmentMap.cpp  EnvironmentMap.h  EnvironmentNode.cpp  EnvironmentNode.h  FrameBuffer.cpp  FrameBuffer.h  Geometry.cpp  Geometry.h  Group.cpp  Group.h  Material.cpp  Material.h  Node.cpp  Node.h  NodeVisitor.h  OGLVisitor.cpp  OGLVisitor.h  README.md  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  ShaderNode.cpp  ShaderNode.h  Texture.cpp  Texture.h  TransformNode.cpp  TransformNode.h
Samples/Triangle/: CMakeLists.txt  Main.cpp
Vx.Blaze.GLTF/: CMakeLists.txt  GLTFLoader.cpp  GLTFLoader.h
assets/: sky_irradiance.hdr  test.blend  test.blend1  test.gltf
assets/assets/hdrs/gothic_manor_01_f05cb032-975e-4811-b58e-d5413405eb9c/: gothic_manor_01_1K_de04da9e-48cc-44ef-ad96-1b5d0bef853b.exr
assets/shaders/: pbr.frag  pbr.vert  sky.frag  sky.vert
